<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/Theme.Quwi.Text.SakkalMajalla.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_50"
            android:text="@string/registration"
            android:textSize="@dimen/text_size_40"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/ivQuwiInfo"
            android:layout_width="@dimen/size_288"
            android:layout_height="@dimen/size_250"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_info_quwi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/lineBottom"
            app:layout_constraintBottom_toBottomOf="@+id/lineBottom" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_lower_plug"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputName"
            style="@style/Theme.Quwi.TextInput.Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_44"
            app:startIconDrawable="@drawable/ic_person"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintBottom_toTopOf="@+id/textInputEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                style="@style/Theme.Quwi.TextInput.EditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40"
                android:hint="@string/name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/Theme.Quwi.TextInput.Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_44"
            android:layout_marginTop="@dimen/size_20"
            app:startIconDrawable="@drawable/ic_email"
            app:layout_constraintVertical_bias="0.7"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/textInputName"
            app:layout_constraintBottom_toTopOf="@+id/textInputPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/Theme.Quwi.TextInput.EditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/Theme.Quwi.TextInput.Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:layout_marginHorizontal="@dimen/size_44"
            app:startIconDrawable="@drawable/ic_lock"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/text_hint"
            app:layout_constraintTop_toBottomOf="@+id/textInputEmail"
            app:layout_constraintBottom_toTopOf="@+id/btnRegistration">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/Theme.Quwi.TextInput.EditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegistration"
            style="@style/Theme.Quwi.MaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_44"
            android:layout_marginTop="@dimen/size_40"
            android:text="@string/registration"
            app:layout_constraintTop_toBottomOf="@+id/textInputPassword"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/Theme.Quwi.MaterialButton.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_44"
            android:layout_marginTop="@dimen/size_10"
            android:text="@string/already_have_account"
            app:layout_constraintTop_toBottomOf="@+id/btnRegistration"
            app:layout_constraintBottom_toTopOf="@+id/ivQuwiInfo"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/lineBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/size_80" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>